manifests/prod/redirects/redirect-dummy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-http-svc
  namespace: journal--prod
spec:
  type: ExternalName
  externalName: elifesciences.org
  ports:
  - protocol: TCP
    port: 80
