manifests/prod/redirects/developers-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header Cache-Control "public, max-age=86400, immutable";
      return 302 https://elifesciences.org/elife-news/inside-elife-resources-developers;
  name: developers-redirect
  namespace: journal--prod
spec:
  rules:
    - host: developers.elifesciences.org
  tls:
    - hosts:
        - developers.elifesciences.org
      secretName: developers.elifesciences.org-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: developers-redirect-traefik
  namespace: journal--prod
  annotations:
    external-dns.alpha.kubernetes.io/controller: "disabled"
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: journal-prod-developers-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: developers.elifesciences.org
  tls:
    - hosts:
        - developers.elifesciences.org
      secretName: developers.elifesciences.org-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: developers-redirect
  namespace: journal--prod
spec:
  redirectRegex:
    regex: ".*"
    replacement: https://elifesciences.org/elife-news/inside-elife-resources-developers
    permanent: true
